--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
  body {
-  background-color: #00FF94;
+  background-color: #1C1C1C;
 }
 
 h1 {
-	color: black;
+	color: #00FF94;
 	text-align: center;
 	font-family: 'Barlow', sans-serif;
 }
 
 p {
+	color: white;
 	font-family: 'Barlow', sans-serif;
 	font-size: 20px;
 	text-align: center;
 }
-</style> 
+		 a {
+        color: #FFFFFF;
+      }
+</style>
+	<link rel="icon" href="Hexa_Logo_No_BG-removebg-preview.png" type="image/x-icon">
 </head>
 
 <body>
 	<h1><b>Welcome to Hexa!</b></h1>
 	<p>This site is currently under construction</p>
-	<p>GitHub repo:</p>
+	<p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
+	<img src="building.png" alt="Construction Site">
+	<p><a href="https://www.flaticon.com/free-icons/construction-site" title="construction site icons">Construction site icons created by Freepik - Flaticon</a></p>
 </body>
 </html>
