--- a/index.html
+++ b/index.html
@@ -1,39 +1,73 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Hexa</title>
-	 <style>
-@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
- body {
-  background-color: #1C1C1C;
-}
+	<head>
+		<meta charset="UTF-8">
+		<title>Hexa</title>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
+			body {
+ 				background-color: #1C1C1C;
+			}
 
-h1 {
-	color: #00FF94;
-	text-align: center;
-	font-family: 'Barlow', sans-serif;
-}
+			h1 {
+				color: #00FF94;
+				text-align: center;
+				font-family: 'Barlow', sans-serif;
+			}
 
-p {
-	color: white;
-	font-family: 'Barlow', sans-serif;
-	font-size: 20px;
-	text-align: center;
-}
-		 a {
-        color: #FFFFFF;
-      }
-</style>
-	<link rel="icon" href="Hexa_Logo_No_BG-removebg-preview.png" type="image/x-icon">
-</head>
+			h2 {
+				color: #00FF94;
+				text-align: center;
+				font-family: 'Barlow', sans-serif;
+			}
+		 
+			h3 {
+				color: #00FF94;
+				text-align: center;
+				font-family: 'Barlow', sans-serif;
+			}
+		 
+			h6 {
+				color: white;
+				font-family: 'Barlow', sans-serif;
+				font-size: 10px;
+				text-align: left;
+				}
+		 
+			p {
+				color: white;
+				font-family: 'Barlow', sans-serif;
+				font-size: 20px;
+				text-align: center;
+			}
+		 
+			a {
+				color: #FFFFFF;
+			}
+		</style>
+		<link rel="icon" href="Hexa_Logo_No_BG-removebg-preview.png" type="image/x">
+	</head>
 
-<body>
-	<h1><b>Welcome to Hexa!</b></h1>
-	<p>This site is currently under construction</p>
-	<p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
-	<img src="building.png" alt="Construction Site">
-	<p><a href="https://www.flaticon.com/free-icons/construction-site" title="construction site icons">Construction site icons created by Freepik - Flaticon</a></p>
-</body>
+	<body>
+		<nav><p>Logo Placeholder | <a href="https://github.com/hexa-development/Website" title="GitHub Repo">GitHub Repo</a> | <a href="https://discord.gg/vqMePZUBT4" title="Discord Server">Discord Server</a></p></nav>
+		<h1><b>Welcome to Hexa!</b></h1>
+			<p>This site is currently under construction</p>
+		<h2>Our Projects</h2>
+			<h3>Clockwork</h3>
+				<p>The ultimate retro gaming system.Powered by Raspberry Pi, RetroArch and Debian</p>
+				<p>More information: <u>Not currently avaliable</u></p>
+			<h3>Project Alpha</h3>
+				<p>Secret game coming soon for the Nintendo Gameboy</p>
+			<p>Details will be revealed soon 🤫</p>
+			<h3>Project Omega</h3>
+				<p>Platformer game cross RPG, in a retro style.</p>
+			<!-- <p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
+			<img src="building.png" alt="Construction Site">
+			<p><a href="https://www.flaticon.com/free-icons/construction-site" title="construction site icons">Construction site icons created by Freepik - Flaticon</a></p> -->
+			<!-- 🐣Secret easter egg! Hello, browser of this code! Polygon loves to add easter eggs to his source code! Look out for more!-->
+	</body>
+	<footer>
+		<h6>&copy; Hexa and Polygon Transit 2021-2022 - <a href="privacy.html" title="Privacy Policy">Privacy Policy</a></h6>
+	</footer>
 </html>
