--- a/privacy-old.html
+++ b/privacy-old.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hexa</title>
+		<title>Privacy Policy</title>
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
@@ -80,33 +80,18 @@
 	</head>
 
 	<body>
-		
-		<!-- Navigation Bar -->
+			<!-- <nav><p>Logo Placeholder | <a href="https://github.com/hexa-development/Website" title="GitHub Repo">GitHub Repo</a> | <a href="https://discord.gg/vqMePZUBT4" title="Discord Server">Discord Server</a></p></nav> -->
+			<!-- Body -->
 			<ul class="nav">
-				<!-- <li><link rel="icon" href="Hexa_Logo_No_BG-removebg-preview.png" id="logo"></li> -->
 				<li>Hexa - Development Beta</li>
-				<li><a href="/home">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="/home">About</a></li>
 				<li><a href="https://discord.gg/vqMePZUBT4">Discord Server</a></li>
 			</ul>
-		
-		<!-- Main Site -->
-		<h1><b>Welcome to Hexa!</b></h1>
-			<p>This site is currently under construction</p>
-		<h2>Our Projects</h2>
-			<h3>Clockwork</h3>
-				<p>The ultimate retro gaming system. Powered by Raspberry Pi, RetroArch and Debian</p>
-				<p>More information: <u>Not currently avaliable</u></p>
-			<h3>Project Alpha</h3>
-				<p>Secret game coming soon for the Nintendo Gameboy</p>
-			<p>Details will be revealed soon 🤫</p>
-			<h3>Project Omega</h3>
-				<p>Platformer game cross RPG, in a retro style.</p>
-			<!-- <p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
-			<img src="building.png" alt="Construction Site">
-			<p><a href="https://www.flaticon.com/free-icons/construction-site" title="construction site icons">Construction site icons created by Freepik - Flaticon</a></p> -->
-			<!-- 🐣Secret easter egg! Hello, browser of this code! Polygon loves to add easter eggs to his source code! Look out for more!-->
-	</body>
+			<h1>Privacy Policy</h1>
+			<p>Coming soon! 🚚💨</p>
+			<p>Help contribute on GitHub</p>
+    </body>
 	<footer>
 		<p><small>&copy; Hexa and Polygon Transit 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p>
 	</footer>
