--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			}
 			
 			footer {
-            	border-bottom: 1px solid #FFFFFF;
+            	border-top: 1px solid #FFFFFF;
 				text-align: left
 			}
 			li {
