--- a/index.html
+++ b/index.html
@@ -96,13 +96,17 @@
 		<h2>Our Projects</h2>
 			<h3>Clockwork</h3>
 				<p>The ultimate retro gaming system. Powered by Raspberry Pi, RetroArch and Debian</p>
-				<p>More information: <u>Not currently avaliable</u></p>
-			<h3>Project Alpha</h3>
+			<p>More information: <u>Not currently avaliable</u></p>
+	<p>&nbsp;</p>
+<h3>Project Alpha</h3>
 				<p>Secret game coming soon for the Nintendo Gameboy</p>
-			<p>Details will be revealed soon 🤫</p>
-			<h3>Project Omega</h3>
-				<p>Platformer game cross RPG, in a retro style.</p>
-			<!-- <p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
+		    <p>Details will be revealed soon 🤫</p>
+    <p>&nbsp;</p>
+<h3>Project Omega</h3>
+			<p>Platformer game cross RPG, in a retro style.</p>
+				<
+<p></p>
+	<!-- <p><a href="https://github.com/hexa-development/Website" title="github repo">GitHub Repo</a></p>
 			<img src="building.png" alt="Construction Site">
 			<p><a href="https://www.flaticon.com/free-icons/construction-site" title="construction site icons">Construction site icons created by Freepik - Flaticon</a></p> -->
 			<!-- 🐣Secret easter egg! Hello, browser of this code! Polygon loves to add easter eggs to his source code! Look out for more!-->
