--- a/privacy.html
+++ b/privacy.html
@@ -6,48 +6,52 @@
 			@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
 			body {
- 				background-color: #FFFFFF;
+ 				background-color: #1C1C1C;
 			}
 
 			h1 {
-				color: black;
+				color: #00FF94;
 				text-align: center;
 				font-family: 'Barlow', sans-serif;
 			}
 
 			h2 {
-				color: black;
+				color: #00FF94;
 				text-align: center;
 				font-family: 'Barlow', sans-serif;
 			}
 		 
 			h3 {
-				color: black;
+				color: #00FF94;
 				text-align: center;
 				font-family: 'Barlow', sans-serif;
 			}
 		 
 			h6 {
-				color: black;
+				color: white;
 				font-family: 'Barlow', sans-serif;
 				font-size: 10px;
 				text-align: left;
 				}
 		 
 			p {
-				color: black;
+				color: white;
 				font-family: 'Barlow', sans-serif;
 				font-size: 20px;
 				text-align: center;
 			}
+		 
+			a {
+				color: #FFFFFF;
+			}
 			
 			footer {
-            	border-bottom: 1px solid black;
+            	border-top: 1px solid #FFFFFF;
 				text-align: left
 			}
 			li {
             	text-align: center;
-				border-bottom: 1px solid black;
+		z
 				font-family: 'Barlow', sans-serif;
 			}
 			
@@ -63,7 +67,7 @@
 			}
 			
 			ul.nav > li:hover {
-  				background-color: #black;
+  				background-color: #FFFFFF;
 			}
 			
 			ul.nav > li > a {
