Updated full site

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<meta charset="UTF-8">
-		<title>404</title>
+		<title>Error 404 - Hexa</title>
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap');
@@ -94,6 +94,6 @@
 			<p>Help contribute to our site on GitHub.&nbsp;&nbsp;</p>
 </body>
 <footer>
-	<p><small>&copy; Hexa and Polygon Transit 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p>
+	<p><small>&copy; Hexa and <a href="https://github.com/PolygonYT" class="user-mention">@Polygon Transit</a> 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p>
 </footer>
 </html>
