--- a/index.html
+++ b/index.html
@@ -111,6 +111,5 @@
 			<!-- 🐣Secret easter egg! Hello, browser of this code! Polygon loves to add easter eggs to his source code! Look out for more!-->
 	</body>
 	<footer>
-		<p><small>&copy; Hexa and Polygon Transit 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p>
-	</footer>
+<p><small>&copy; Hexa and <a href="https://github.com/PolygonYT" class="user-mention">@Polygon Transit</a> 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p>	</footer>
 </html>
