--- a/privacy.html
+++ b/privacy.html
@@ -254,4 +254,5 @@
 		<li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="86f6e9eaffe1e9e8f2f4e7e8f5eff2c6f6f4e9f2e9e8ebe7efeaa8e5e9eb">[email&nbsp;protected]</a></li>
 		</ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	</body>
+	<footer><p><small>&copy; Hexa and <a href="https://github.com/PolygonYT" class="user-mention">@Polygon Transit</a> 2021-2022 - <a href="privacy.html">Privacy Policy</a></small></p></footer>
 </html>
